--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -103,7 +103,7 @@ a {
 .araiguma_speech_bubble:after {
     content: "";
     position: absolute;
-    background-image: url("../img/araiguma.jpg");
+    background-image: url("../../img/araiguma.jpg");
     display: inline-block;
     width: 100px;
     height: 100px;
@@ -138,7 +138,7 @@ a {
 .kitsune_speech_bubble:after {
     content: "";
     position: absolute;
-    background-image: url("../img/kitsune.jpg");
+    background-image: url("../../img/kitsune.jpg");
     display: inline-block;
     width: 100px;
     height: 100px;
@@ -176,7 +176,7 @@ a {
 .araiguma_shout_speech_bubble:after {
     content: "";
     position: absolute;
-    background-image: url("../img/araiguma_shout.jpg");
+    background-image: url("../../img/araiguma_shout.jpg");
     display: inline-block;
     width: 100px;
     height: 100px;
